# context-server-rs

./: .gitignore  BUILD_VERIFICATION_REPORT.md  CLEANUP_DELIVERY_SUMMARY.md  CLEANUP_INDEX.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_PACKAGE_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_IMPLEMENTATION_COMPLETE.md  CLI_STATUS_FINAL.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_FINAL_TEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_CONSOLIDATED.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FILE_MANIFEST.md  IDE_INTEGRATION_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_STATUS.md  OPENCLAW_INTEGRATION.md  PRODUCTION_CLEANUP.md  PRODUCTION_READINESS.md  PRODUCTION_RELEASE.md  PROJECT_CONTEXT.md  QUICK_CLEANUP.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  SOLID_IMPLEMENTATION.md  START_CLEANUP.md  STATUS.md  TASK_2_2_IMPLEMENTATION_SUMMARY.md  TASK_2_3_IMPLEMENTATION_SUMMARY.md  TASK_3_2_IMPLEMENTATION_SUMMARY.md  TASK_3_3_IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_SUMMARY.md  TEST_RESULTS.md  (+16 more)
.copilot/: settings.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: CLI_QUICK_REFERENCE.md  CLI_USAGE.md  DUAL_MODE_OPERATION.md  OPENCLAW_CLI_INTEGRATION.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_CONTEXT.md  SHIPPING_GUIDE.md  SOLID_SUCCESS.md  STATUS.md  WARNINGS_CLEANUP.md  features-wishlist.md  features.md
examples/: OPENCLAW_CONTEXT_README.md  api_usage.md  context_capture_examples.md  context_engineering_principles.md  context_query_examples.md  openclaw_constraints.sql  openclaw_dependencies.sql  system_prompt_template.txt  test_cases.md  troubleshooting.md
scripts/: README.md  build-extension.ps1  build-extension.sh  cleanup-docs.py  cleanup-project.sh  cleanup.py  git-cleanup.sh  test_mcp.sh
src/: container.rs  context_server.rs  context_server_solid.rs  enhanced_context_server.rs  lib.rs  main.rs
tests/: advanced_query_integration_test.rs  cli_integration_test.sh  cli_integration_tests.rs  integration_tests.rs  mcp_endpoint_tests.rs  openclaw_integration_test.rs
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  (+15 more)
(+147 files in other folders)
